src/objects/echosign_dev1__Agreement_Template__c.object
<CustomObject>
    <customHelpPage>echosign_dev1__EchoSignUserGuide</customHelpPage>
    <description>Agreement Templates allow you to predefine default settings and options for your agreements which can save you time and help minimize errors.</description>
    <fields>
        <fullName>echosign_dev1__Account__c</fullName>
        <description>Set the Salesforce ID of the account record which the agreement should look up to.</description>
        <inlineHelpText>Set the Salesforce ID of the account record which the agreement should look up to.</inlineHelpText>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Controls visibility of the Agreement Template.</description>
        <inlineHelpText>If checked, the Agreement Template is visible, else it is not.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Agreement_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Type</label>
        <referenceTo>echosign_dev1__Agreement_Type__c</referenceTo>
        <relationshipLabel>Agreement Templates</relationshipLabel>
        <relationshipName>Agreement_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Auto_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically send the agreement without displaying the send page. (e.g. triggered workflows) Make sure to add a recipient and a file attachment if using this option.</description>
        <inlineHelpText>Automatically send the agreement without displaying the send page. (e.g. triggered workflows) Make sure to add a recipient and a file attachment if using this option.</inlineHelpText>
        <label>Auto Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Automatic_Reminders__c</fullName>
        <description>Send automatic reminders to signers.</description>
        <inlineHelpText>Send automatic reminders to signers.</inlineHelpText>
        <label>Automatic Reminders</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                    <default>true</default>
                    <label>Never</label>
                </value>
                <value>
                    <fullName>Every Day, Until Signed</fullName>
                </value>
                <value>
                    <fullName>Every Week, Until Signed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Available_Publisher_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>On the Master object record, make this agreement template available to senders via the Chatter Feed Adobe Sign send for signature action.</description>
        <inlineHelpText>On the Master object record, make this agreement template available to senders via the Chatter Feed Adobe Sign send for signature action.</inlineHelpText>
        <label>Available for Publisher Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Confirm_Password__c</fullName>
        <description>Confirm the password that you want the recipient to input.</description>
        <inlineHelpText>Confirm the password that you want the recipient to input.</inlineHelpText>
        <label>Confirm Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Contract__c</fullName>
        <description>Set the Salesforce ID of the contract record which the agreement should look up to.</description>
        <inlineHelpText>Set the Salesforce ID of the contract record which the agreement should look up to.</inlineHelpText>
        <label>Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Data_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the data mapping to map Adobe Sign field inputs from the signed agreement back into Salesforce.</description>
        <inlineHelpText>Select the data mapping to map Adobe Sign field inputs from the signed agreement back into Salesforce.</inlineHelpText>
        <label>Data Mapping</label>
        <referenceTo>echosign_dev1__SIGN_Data_Mapping__c</referenceTo>
        <relationshipLabel>Agreement Templates</relationshipLabel>
        <relationshipName>Agreement_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Days_Until_Expiration2__c</fullName>
        <description>Set the number of days before the agreement expires.</description>
        <inlineHelpText>Set the number of days before the agreement expires.</inlineHelpText>
        <label>Days Until Expiration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set as default template for new agreements.</description>
        <inlineHelpText>Set as default template for new agreements.</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Email_Copy_To__c</fullName>
        <description>Send copies of the agreement to the specified email addresses.</description>
        <inlineHelpText>Send copies of the agreement to the specified email addresses.</inlineHelpText>
        <label>Email Copy To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__External_Signers_Verification_Method__c</fullName>
        <description>Ensure that before external signers can view or sign the document, they have to verify their identity.</description>
        <inlineHelpText>Ensure that before external signers can view or sign the document, they have to verify their identity.</inlineHelpText>
        <label>External Signers Verification Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Password to sign agreement</fullName>
                </value>
                <value>
                    <fullName>Knowledge based authentication</fullName>
                </value>
                <value>
                    <fullName>Web identity authentication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Fill_Sign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When enabled, the agreement or document is presented only to the sender to fill and sign. Post Send page can be used to forward the signed document.</description>
        <inlineHelpText>When enabled, the agreement or document is presented only to the sender to fill and sign. Post Send page can be used to forward the signed document.</inlineHelpText>
        <label>Fill &amp; Sign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Hosted_Signing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable hosted in-person signing.</description>
        <inlineHelpText>Enable hosted in-person signing.</inlineHelpText>
        <label>Enable Hosted Signing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Internal_Signers_Verification_Method__c</fullName>
        <description>Ensure that before internal signers can view or sign the document, they have to verify their identity.</description>
        <inlineHelpText>Ensure that before internal signers can view or sign the document, they have to verify their identity.</inlineHelpText>
        <label>Internal Signers Verification Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Password to sign agreement</fullName>
                </value>
                <value>
                    <fullName>Knowledge based authentication</fullName>
                </value>
                <value>
                    <fullName>Web identity authentication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Language__c</fullName>
        <description>Select the language of the recipients.</description>
        <inlineHelpText>Select the language of the recipients.</inlineHelpText>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Chinese (China)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Taiwan)</fullName>
                    <label>Chinese (Taiwan region)</label>
                </value>
                <value>
                    <fullName>Croatian (Croatia)</fullName>
                </value>
                <value>
                    <fullName>Czech (Czech Republic)</fullName>
                </value>
                <value>
                    <fullName>Danish (Denmark)</fullName>
                </value>
                <value>
                    <fullName>Dutch (Netherlands)</fullName>
                </value>
                <value>
                    <fullName>English (United Kingdom)</fullName>
                </value>
                <value>
                    <fullName>English (United States)</fullName>
                    <default>true</default>
                    <label>English (United States)</label>
                </value>
                <value>
                    <fullName>Finnish (Finland)</fullName>
                </value>
                <value>
                    <fullName>French (France)</fullName>
                </value>
                <value>
                    <fullName>German (Germany)</fullName>
                </value>
                <value>
                    <fullName>Hungarian (Hungary)</fullName>
                </value>
                <value>
                    <fullName>Icelandic (Iceland)</fullName>
                </value>
                <value>
                    <fullName>Indonesian (Indonesia)</fullName>
                </value>
                <value>
                    <fullName>Italian (Italy)</fullName>
                </value>
                <value>
                    <fullName>Japanese (Japan)</fullName>
                </value>
                <value>
                    <fullName>Korean (South Korea)</fullName>
                </value>
                <value>
                    <fullName>Malay (Malaysia)</fullName>
                </value>
                <value>
                    <fullName>Norwegian (Bokmal: Norway)</fullName>
                </value>
                <value>
                    <fullName>Norwegian (Norway)</fullName>
                </value>
                <value>
                    <fullName>Norwegian (Nynorsk: Norway)</fullName>
                </value>
                <value>
                    <fullName>Polish (Poland)</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Brazil)</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Portugal)</fullName>
                </value>
                <value>
                    <fullName>Romanian (Romania)</fullName>
                </value>
                <value>
                    <fullName>Russian (Russia)</fullName>
                </value>
                <value>
                    <fullName>Slovak (Slovakia)</fullName>
                </value>
                <value>
                    <fullName>Slovenian (Slovenia)</fullName>
                </value>
                <value>
                    <fullName>Spanish (Basque: Spain)</fullName>
                </value>
                <value>
                    <fullName>Spanish (Catalan: Spain)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Master_Object_Type__c</fullName>
        <description>Specify the Salesforce object that will be referenced for this agreement template. (e.g. Opportunity, Lead)</description>
        <inlineHelpText>Specify the Salesforce object that will be referenced for this agreement template. (e.g. Opportunity, Lead)</inlineHelpText>
        <label>Master Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Merge_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the merge mapping to merge Salesforce fields into the Adobe Sign agreement before it is sent for signature.</description>
        <inlineHelpText>Select the merge mapping to merge Salesforce fields into the Adobe Sign agreement before it is sent for signature.</inlineHelpText>
        <label>Merge Mapping</label>
        <referenceTo>echosign_dev1__SIGN_Merge_Mapping__c</referenceTo>
        <relationshipLabel>Agreement Templates</relationshipLabel>
        <relationshipName>Agreement_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Message__c</fullName>
        <description>Enter a message that will be sent to the recipients.</description>
        <inlineHelpText>Enter a message that will be sent to the recipients.</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Name__c</fullName>
        <defaultValue>&quot;Adobe Sign Agreement&quot;</defaultValue>
        <description>Enter a name for the agreement.</description>
        <inlineHelpText>Enter a name for the agreement.</inlineHelpText>
        <label>Agreement Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Opportunity__c</fullName>
        <description>Set the Salesforce ID of the opportunity record which the agreement should look up to.</description>
        <inlineHelpText>Set the Salesforce ID of the opportunity record which the agreement should look up to.</inlineHelpText>
        <label>Opportunity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Password__c</fullName>
        <description>Enter a password that you want the recipient to input.</description>
        <inlineHelpText>Enter a password that you want the recipient to input.</inlineHelpText>
        <label>View Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Post_Sign_Redirect_Delay__c</fullName>
        <label>Post Sign Redirect Delay (seconds)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Post_Sign_Redirect_URL__c</fullName>
        <label>Post Sign Redirect URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Preview_Position__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable signers to preview and position fields on the document before agreement is sent for signature.</description>
        <inlineHelpText>Enable signers to preview and position fields on the document before agreement is sent for signature.</inlineHelpText>
        <label>Enable Preview and Position Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Sender_Signs_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When enabled, the agreement or document is presented only to the sender for signature.</description>
        <inlineHelpText>When enabled, the agreement or document is presented only to the sender for signature.</inlineHelpText>
        <label>Sender Signs Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Sender_User__c</fullName>
        <description>When the agreement is auto sent or sent using an automated workflow, the agreement will be sent on behalf of the user specified by this field. If not specified, the current context user will be used as usual.</description>
        <inlineHelpText>When the agreement is auto sent or sent using an automated workflow, the agreement will be sent on behalf of the user specified by this field. If not specified, the current context user will be used as usual.</inlineHelpText>
        <label>Send On Behalf Of</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Sign_External_Password__c</fullName>
        <label>Sign External Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Sign_Internal_Password__c</fullName>
        <label>Sign Internal Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Sign_Password__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set a password the recipient needs to enter to sign the agreement.</description>
        <inlineHelpText>Set a password the recipient needs to enter to sign the agreement.</inlineHelpText>
        <label>Password to Sign Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Sign_Workflow_Id__c</fullName>
        <description>Sign Workflow Id</description>
        <inlineHelpText>Sign Workflow Id</inlineHelpText>
        <label>Sign Workflow Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Signature_Flow__c</fullName>
        <description>Set the recipient order for signing documents.</description>
        <inlineHelpText>Set the recipient order for signing documents.</inlineHelpText>
        <label>Signature Flow</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recipients sign in order</fullName>
                    <default>true</default>
                    <label>Recipients sign in order</label>
                </value>
                <value>
                    <fullName>Recipients sign in any order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Signature_Order__c</fullName>
        <description>Enable the sender to also sign the agreement by selecting a signature order.</description>
        <inlineHelpText>Enable the sender to also sign the agreement by selecting a signature order.</inlineHelpText>
        <label>Sender Signature Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recipients sign first, then sender signs</fullName>
                </value>
                <value>
                    <fullName>Sender signs first, then recipients sign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Signature_Type__c</fullName>
        <description>Send for electronic signature or request written signature.</description>
        <inlineHelpText>Send for electronic signature or request written signature.</inlineHelpText>
        <label>Signature Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>e-Signature</fullName>
                    <default>true</default>
                    <label>e-Signature</label>
                </value>
                <value>
                    <fullName>Written Signature</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__View_Password__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The signed PDF that is sent to all parties is encrypted and this password will be required to open it. Don&apos;t lose the password as it is not recoverable.</description>
        <inlineHelpText>The signed PDF that is sent to all parties is encrypted and this password will be required to open it. Don&apos;t lose the password as it is not recoverable.</inlineHelpText>
        <label>Password protect the signed document</label>
        <type>Checkbox</type>
    </fields>
    <label>Agreement Template</label>
    <listViews>
        <fullName>echosign_dev1__All</fullName>
        <columns>NAME</columns>
        <columns>echosign_dev1__Default__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agreement Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>echosign_dev1__Confirm_Password</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
  AND(  
    OR( echosign_dev1__View_Password__c ,  echosign_dev1__Sign_Password__c  ) ,   
    NOT(  echosign_dev1__Password__c =  echosign_dev1__Confirm_Password__c ) 
  ),
  AND(  
    OR(  
      TEXT(  echosign_dev1__External_Signers_Verification_Method__c  ) = &apos;Password to Sign Agreement&apos;,  
      TEXT(  echosign_dev1__Internal_Signers_Verification_Method__c  ) = &apos;Password to Sign Agreement&apos; 
    ),
    NOT(  echosign_dev1__Password__c =  echosign_dev1__Confirm_Password__c ) 
  )
)</errorConditionFormula>
        <errorDisplayField>echosign_dev1__Confirm_Password__c</errorDisplayField>
        <errorMessage>Confirm password does not match the password that you want the recipient to input.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>echosign_dev1__Enabled_Password_Set</fullName>
        <active>false</active>
        <errorConditionFormula>false</errorConditionFormula>
        <errorMessage>Enter a password that you want the recipient to input.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>echosign_dev1__Maximum_Expiration_Days</fullName>
        <active>false</active>
        <errorConditionFormula>false</errorConditionFormula>
        <errorMessage>There is a maximum of 180 days before document expiration.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>echosign_dev1__Minimum_Expiration_Days</fullName>
        <active>false</active>
        <errorConditionFormula>false</errorConditionFormula>
        <errorMessage>There is a minimum of 1 days before document expiration.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>echosign_dev1__Preview_Hosted_With_Auto_Send</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR( echosign_dev1__Hosted_Signing__c, echosign_dev1__Preview_Position__c ),  echosign_dev1__Auto_Send__c )</errorConditionFormula>
        <errorMessage>Enabling in-person or preview/position fields is not allowed with auto send enabled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>echosign_dev1__Written_Without_Revisions</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
  TEXT(echosign_dev1__Signature_Type__c) = &apos;Written Signature&apos;,
  false
)</errorConditionFormula>
        <errorMessage>Suggesting revisions is not possible with a written signature.</errorMessage>
    </validationRules>
</CustomObject>